--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/css/styles.css" />
-    <title>Tomas Abraham</title>
+    <title>Tomas A. Portfolio</title>
   </head>
   <body>
     <div class="header">
@@ -29,21 +29,24 @@
                 class="link-image"
             /></a>
           </li>
-          <li id="contact">Contact</li>
+          <li id="contact"><a href="#footer">Contact</a></li>
         </ul>
       </div>
       <div class="main-header">
-        <div class="profile-photo">
-          <img src="/images/myPhoto.png" alt="" />
+        <div>
+          <img src="/images/myPhoto.png" alt="" class="profile-photo" />
         </div>
         <div class="info-text">
           <h1>Tomas Abraham</h1>
-          <p>Front-End Developer</p>
-          <button>Hire me!</button>
+          <p>Front-End Web Developer</p>
+          <button><a href="#footer">Hire me!</a></button>
         </div>
       </div>
+      <div id="arrow">
+        <a href="#about"><img src="/images/arrow.jpg" alt="down-arrow" /></a>
+      </div>
     </div>
-    <div class="about-me">
+    <div class="about-me" id="about">
       <div>
         <img
           src="/images/pexels-photo-169573.jpeg"
@@ -54,15 +57,78 @@
       <div class="description">
         <h2>About Me</h2>
         <p>
-          Hello! My name is Tomas Abraham and i'm a front-end web developer and
-          a student at the National Technological University, better known as
-          UTN.
+          Hello! My name is <strong>Tomas Abraham</strong> and i'm a
+          <strong>Front-End Web Developer</strong> and a student at the National
+          Technological University, better known as UTN.
         </p>
         <p>
           I'm very passionate about technology and programming, and very eager
           to keep developing my skills in this line of work
         </p>
       </div>
+    </div>
+    <div class="technologies">
+      <h2>Technologies I use</h2>
+      <div class="tech-images">
+        <div><img src="/images/js.svg" alt="" class="tech-java" /></div>
+        <div>
+          <img src="/images/html-css-logo.png" alt="" class="tech-html" />
+        </div>
+        <div>
+          <img
+            src="/images/1200px-Xubuntu_logo.svg.png"
+            alt=""
+            class="tech-java"
+          />
+        </div>
+      </div>
+    </div>
+
+    <div class="projects">
+      <h2>Projects i have worked on</h2>
+      <div class="container">
+        <div>
+          <a href="https://tomas2207.github.io/landing-page/" target="_blank"
+            ><img
+              src="/images/landing-page.png"
+              alt="landing page project"
+              class="project-photo"
+          /></a>
+        </div>
+        <div>
+          <a href="https://tomas2207.github.io/odin-recipes/" target="_blank"
+            ><img
+              src="/images/recipes.png"
+              alt="recipes project"
+              class="project-photo"
+          /></a>
+        </div>
+      </div>
+    </div>
+
+    <div class="footer" id="footer">
+      <h2>Contact:</h2>
+      <ul>
+        <li>Email: tomas.abraham@outlook.es</li>
+        <li>
+          <a href="https://github.com/Tomas2207" target="_blank"
+            ><img
+              src="/images/unnamed.png"
+              alt="github link"
+              class="link-image"
+          /></a>
+        </li>
+        <li>
+          <a
+            href="https://www.linkedin.com/in/tom%C3%A1s-abraham-869083216"
+            target="_blank"
+            ><img
+              src="/images/LinkedIn-logo.png"
+              alt="linkedin link"
+              class="link-image"
+          /></a>
+        </li>
+      </ul>
     </div>
   </body>
 </html>
