fixed css not loading

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/css/styles.css" />
+    <link rel="stylesheet" href="css/styles.css" />
     <title>Tomas A. Portfolio</title>
   </head>
   <body>
@@ -14,7 +14,7 @@
           <li>
             <a href="https://github.com/Tomas2207" target="_blank"
               ><img
-                src="/images/unnamed.png"
+                src="images/unnamed.png"
                 alt="github link"
                 class="link-image"
             /></a>
@@ -24,7 +24,7 @@
               href="https://www.linkedin.com/in/tom%C3%A1s-abraham-869083216"
               target="_blank"
               ><img
-                src="/images/LinkedIn-logo.png"
+                src="images/LinkedIn-logo.png"
                 alt="linkedin link"
                 class="link-image"
             /></a>
@@ -34,7 +34,7 @@
       </div>
       <div class="main-header">
         <div>
-          <img src="/images/myPhoto.png" alt="" class="profile-photo" />
+          <img src="images/myPhoto.png" alt="" class="profile-photo" />
         </div>
         <div class="info-text">
           <h1>Tomas Abraham</h1>
@@ -43,13 +43,13 @@
         </div>
       </div>
       <div id="arrow">
-        <a href="#about"><img src="/images/arrow.jpg" alt="down-arrow" /></a>
+        <a href="#about"><img src="images/arrow.jpg" alt="down-arrow" /></a>
       </div>
     </div>
     <div class="about-me" id="about">
       <div>
         <img
-          src="/images/pexels-photo-169573.jpeg"
+          src="images/pexels-photo-169573.jpeg"
           alt="programming photo"
           id="description-photo"
         />
@@ -70,13 +70,13 @@
     <div class="technologies">
       <h2>Technologies I use</h2>
       <div class="tech-images">
-        <div><img src="/images/js.svg" alt="" class="tech-java" /></div>
+        <div><img src="images/js.svg" alt="" class="tech-java" /></div>
         <div>
-          <img src="/images/html-css-logo.png" alt="" class="tech-html" />
+          <img src="images/html-css-logo.png" alt="" class="tech-html" />
         </div>
         <div>
           <img
-            src="/images/1200px-Xubuntu_logo.svg.png"
+            src="images/1200px-Xubuntu_logo.svg.png"
             alt=""
             class="tech-java"
           />
@@ -90,7 +90,7 @@
         <div>
           <a href="https://tomas2207.github.io/landing-page/" target="_blank"
             ><img
-              src="/images/landing-page.png"
+              src="images/landing-page.png"
               alt="landing page project"
               class="project-photo"
           /></a>
@@ -98,7 +98,7 @@
         <div>
           <a href="https://tomas2207.github.io/odin-recipes/" target="_blank"
             ><img
-              src="/images/recipes.png"
+              src="images/recipes.png"
               alt="recipes project"
               class="project-photo"
           /></a>
@@ -112,10 +112,7 @@
         <li>Email: tomas.abraham@outlook.es</li>
         <li>
           <a href="https://github.com/Tomas2207" target="_blank"
-            ><img
-              src="/images/unnamed.png"
-              alt="github link"
-              class="link-image"
+            ><img src="images/unnamed.png" alt="github link" class="link-image"
           /></a>
         </li>
         <li>
@@ -123,7 +120,7 @@
             href="https://www.linkedin.com/in/tom%C3%A1s-abraham-869083216"
             target="_blank"
             ><img
-              src="/images/LinkedIn-logo.png"
+              src="images/LinkedIn-logo.png"
               alt="linkedin link"
               class="link-image"
           /></a>
