added rps project

--- a/index.html
+++ b/index.html
@@ -103,6 +103,16 @@
               class="project-photo"
           /></a>
         </div>
+        <div>
+          <a
+            href="https://tomas2207.github.io/rock-paper-scissors/"
+            target="_blank"
+            ><img
+              src="images/rps.png"
+              alt="rock, paper, scissors project"
+              class="project-photo"
+          /></a>
+        </div>
       </div>
     </div>
 
