--- a/index.html
+++ b/index.html
@@ -88,6 +88,12 @@
       <h2>Projects i have worked on</h2>
       <div class="container">
         <div>
+          <a href="https://tomas2207.github.io/etch-a-sketch/" target="blank_"
+            ><img
+              src="images/etch-a-sketch.png"
+              alt="etch a sketch project"
+              class="project-photo"
+          /></a>
           <a href="https://tomas2207.github.io/landing-page/" target="_blank"
             ><img
               src="images/landing-page.png"
