--- a/index.html
+++ b/index.html
@@ -94,6 +94,16 @@
               alt="etch a sketch project"
               class="project-photo"
           /></a>
+        </div>
+        <div>
+          <a href="https://tomas2207.github.io/calculator/" target="blank_"
+            ><img
+              src="images/calc .png"
+              alt="calculator project"
+              class="project-photo"
+          /></a>
+        </div>
+        <div>
           <a href="https://tomas2207.github.io/landing-page/" target="_blank"
             ><img
               src="images/landing-page.png"
